--- a/WebContent/WEB-INF/Connexion.html
+++ b/WebContent/WEB-INF/Connexion.html
@@ -36,12 +36,12 @@
 	<!-- Start Connexion -->
 	<div class="container">
 		<div class="row align-items-center">
-	      <form class="form-signin">
+	      <form class="form-signin" method="post" action="login">
 	        <h2 class="form-signin-heading">Connectez-vous</h2>
 	        <label for="inputEmail" class="sr-only">Adresse Email</label>
-	        <input type="email" id="inputEmail" class="form-control" placeholder="adresse" required autofocus>
+	        <input type="email" name="email" class="form-control" placeholder="adresse">
 	        <label for="inputPassword" class="sr-only">Mot de passe</label>
-	        <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+	        <input type="password" name="pass" class="form-control" placeholder="Mot de passe">
 	        <button class="btn btn-lg btn-primary btn-block" type="submit">se connecter</button>
 	      </form>
 		</div>
