--- a/WebContent/WEB-INF/Inscription.html
+++ b/WebContent/WEB-INF/Inscription.html
@@ -72,7 +72,7 @@
 					
 					<hr class="colorgraph">
 					<div class="row">
-						<div class="col-xs-12 col-md-6"><input type="submit" value="S'inscrire" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+						<div class="col-xs-12 col-md-6"><input type="submit" value="Sinscrire" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
 						<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Se connecter</a></div>
 					</div>
 				</form>
