--- a/WebContent/WEB-INF/Inscription.html
+++ b/WebContent/WEB-INF/Inscription.html
@@ -45,6 +45,11 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6">
 							<div class="form-group">
+		                        <input type="text" name="isClient" id="isClient" class="form-control input-lg" placeholder="true or false" tabindex="1">
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<div class="form-group">
 		                        <input type="text" name="prenom" id="prenom" class="form-control input-lg" placeholder="Prenom" tabindex="1">
 							</div>
 						</div>
@@ -53,12 +58,16 @@
 								<input type="text" name="nom" id="nom" class="form-control input-lg" placeholder="Nom" tabindex="2">
 							</div>
 						</div>
+						
 					</div>
 					<div class="form-group">
 						<input type="text" name="pseudo" id="pseudo" class="form-control input-lg" placeholder="Pseudo" tabindex="3">
 					</div>
 					<div class="form-group">
 						<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Adresse Email" tabindex="4">
+					</div>
+					<div class="form-group">
+						<input type="text" name="adresse" id="adresse" class="form-control input-lg" placeholder="Adresse" tabindex="4">
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6">
