--- a/WebContent/Inscription.html
+++ b/WebContent/Inscription.html
@@ -17,10 +17,10 @@
           <a class="navbar-brand" href="#">FoodOn</a>
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="">Se connecter</a>
+                      <a class="nav-link" href="Connexion.html">Se connecter</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="">S'inscrire</a>
+                      <a class="nav-link" href="Inscription.html">S'inscrire</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">Besoin d'aide ?</a>
@@ -31,7 +31,7 @@
               </ul>
           </div>
     </nav>
-	<!-- END Navbar -->
+<!-- END Navbar -->
 	
 	
 	
