--- a/WebContent/Inscription.html
+++ b/WebContent/Inscription.html
@@ -14,13 +14,13 @@
 	<!-- START Navbar -->
 	 <nav class="navbar navbar-light navbar-toggleable-md bg-info navbar-inverse">
         <div class="container">
-          <a class="navbar-brand" href="#">FoodOn</a>
+          <a class="navbar-brand" href="FoodOn/index.html">FoodOn</a>
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="Connexion.html">Se connecter</a>
+                      <a class="nav-link" href="FoodOn/Connexion.html">Se connecter</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="Inscription.html">S'inscrire</a>
+                      <a class="nav-link" href="FoodOn/Inscription.html">S'inscrire</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">Besoin d'aide ?</a>
