--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 	<!-- START Navbar -->
 	 <nav class="navbar navbar-light navbar-toggleable-md bg-info navbar-inverse">
         <div class="container">
-          <a class="navbar-brand" href="#">FoodOn</a>
+          <a class="navbar-brand" href="index.html">FoodOn</a>
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
                       <a class="nav-link" href="Connexion.html">Se connecter</a>
