--- a/WebContent/Connexion.html
+++ b/WebContent/Connexion.html
@@ -36,12 +36,13 @@
 	<!-- Start Connexion -->
 	<div class="container">
 		<div class="row align-items-center">
-	      <form class="form-signin" method="post" action="login">
+	      <form class="form-signin" method="get" action="Serv">
 	        <h2 class="form-signin-heading">Connectez-vous</h2>
 	        <label for="inputEmail" class="sr-only">Adresse Email</label>
 	        <input type="email" name="email" class="form-control" placeholder="adresse">
 	        <label for="inputPassword" class="sr-only">Mot de passe</label>
 	        <input type="password" name="pass" class="form-control" placeholder="Mot de passe">
+	        <input type="hidden" name="operation" value="connexion">
 	        <button class="btn btn-lg btn-primary btn-block" type="submit">se connecter</button>
 	      </form>
 		</div>
