--- a/WebContent/Connexion.html
+++ b/WebContent/Connexion.html
@@ -36,7 +36,7 @@
 	<!-- Start Connexion -->
 	<div class="container">
 		<div class="row align-items-center">
-	      <form class="form-signin" method="get" action="Serv">
+	      <form class="form-signin" method="post" action="FoodOn/Serv">
 	        <h2 class="form-signin-heading">Connectez-vous</h2>
 	        <label for="inputEmail" class="sr-only">Adresse Email</label>
 	        <input type="email" name="email" class="form-control" placeholder="adresse">
