--- a/WebContent/Connexion.html
+++ b/WebContent/Connexion.html
@@ -36,10 +36,10 @@
 	<!-- Start Connexion -->
 	<div class="container">
 		<div class="row align-items-center">
-	      <form class="form-signin" method="post" action="FoodOn/Serv">
+	      <form class="form-signin" method="get" action="FoodOn/Serv">
 	        <h2 class="form-signin-heading">Connectez-vous</h2>
 	        <label for="inputEmail" class="sr-only">Adresse Email</label>
-	        <input type="email" name="email" class="form-control" placeholder="adresse">
+	        <input type="email" name="email" class="form-control" placeholder="adresse Email">
 	        <label for="inputPassword" class="sr-only">Mot de passe</label>
 	        <input type="password" name="pass" class="form-control" placeholder="Mot de passe">
 	        <input type="hidden" name="operation" value="connexion">
