--- a/WebContent/Connexion.html
+++ b/WebContent/Connexion.html
@@ -44,7 +44,7 @@
 	              <h4>Compte</h4>
 	            </div>
 	            <div class="card-block">
-	              <form action="FoodOn/homeProprietaire.html">
+	              <form role="form" method="post" action="FoodOn/Serv">
 	                <div class="form-group">
 	                  <label for="email" class="form-control-label">Email</label>
 	                  <input type="text" class="form-control">
@@ -53,6 +53,7 @@
 	                  <label for="password" class="form-control-label">Mot de passe</label>
 	                  <input type="password" class="form-control">
 	                </div>
+	                <input type="hidden" name="operation" value="connexion">
 	                <button class="btn btn-primary btn-block mb-3" type="submit">Se connecter</button>
 	              </form>
 	            </div>
