--- a/WebContent/Inscription.html
+++ b/WebContent/Inscription.html
@@ -41,7 +41,7 @@
 
 		<div class="row align-items-center">
 		    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-4">
-				<form role="form" method="get"  action="FoodOn/Serv">
+				<form role="form" method="post"  action="FoodOn/Serv">
 					<hr class="colorgraph">
 					
 					 <div class="register-type-wrapper"><label class="visually-hidden required">Type</label>
