--- a/WebContent/Connexion.html
+++ b/WebContent/Connexion.html
@@ -47,11 +47,11 @@
 	              <form role="form" method="post" action="FoodOn/Serv">
 	                <div class="form-group">
 	                  <label for="email" class="form-control-label">Email</label>
-	                  <input type="text" class="form-control">
+	                  <input name="email" type="text" class="form-control">
 	                </div>
 	                <div class="form-group">
 	                  <label for="password" class="form-control-label">Mot de passe</label>
-	                  <input type="password" class="form-control">
+	                  <input name="pass" type="password" class="form-control">
 	                </div>
 	                <input type="hidden" name="operation" value="connexion">
 	                <button class="btn btn-primary btn-block mb-3" type="submit">Se connecter</button>
