--- a/WebContent/homeProprietaire.html
+++ b/WebContent/homeProprietaire.html
@@ -161,21 +161,25 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form method="post" action="FoodOn/Serv">
             <div class="form-group">
-              <label for="title" class="form-control-label">Nom</label>
-              <input type="text" class="form-control">
+              <label for="nom" class="form-control-label">Nom</label>
+              <input type="text" name="nom" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="adresse" class="form-control-label">Adresse</label>
+              <input type="text" name="adresse" class="form-control">
             </div>
             <div class="form-group">
               <label for="category" class="form-control-label">Spécialité</label>
-              <select class="form-control">
+              <select name="specialite" class="form-control">
                 <option value="">Italien</option>
                 <option value="">Français</option>
               </select>
             </div>
             <div class="form-group bg-faded p-3">
               <label for="file">Image</label>
-              <input type="file" class="form-control-file" id="file">
+              <input type="file" name="photo" class="form-control-file" id="file">
               <small id="fileHelp" class="form-text text-muted">
                 taille max 2MB
               </small>
@@ -186,9 +190,10 @@
             </div>
           </form>
         </div>
+        <input type="hidden" name="operation" value="ajouterRestaurant">
         <div class="modal-footer">
           <button class="btn btn-secondary" data-dismiss="modal">fermer</button>
-            <button class="btn btn-primary" data-dismiss="modal">Ajouter le restaurant</button>
+          <button class="btn btn-primary" data-dismiss="modal">Ajouter le restaurant</button>
         </div>
       </div>
     </div>
