--- a/WebContent/commande.html
+++ b/WebContent/commande.html
@@ -71,7 +71,7 @@
     <form>
       <div class="form-group">
         <label for="title" class="form-control-label">Quantité</label>
-        <input type="text" class="form-control">
+        <input type="text" name="quantite" class="form-control">
       </div>
       <a href="homeClient.html" class="btn btn-success btn-block">Commander</a>
     </form>
