--- a/WebContent/restaurant.html
+++ b/WebContent/restaurant.html
@@ -73,7 +73,7 @@
           <a href="#" class="btn btn-success btn-block"><i class="fa fa-plus"></i>Commencer la commande</a>
         </div>
         <div class="col-md-6">
-          <a href="#" class="btn btn-success btn-block"><i class="fa fa-plus"></i>Finaliser la commande</a>
+          <a href="Serv?operation=commander" class="btn btn-success btn-block"><i class="fa fa-plus"></i>Finaliser la commande</a>
         </div>
       </div>
     </div>
