--- a/WebContent/restaurant.html
+++ b/WebContent/restaurant.html
@@ -91,7 +91,7 @@
                     <h4 class="card-title">Nom Plat</h4>
                     <h6>Nom restaurant</h6>
                     <p class="card-text">bla bla bla haha bla bla </p>
-                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span</a>
+                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span></a>
                      <a href="plat.html" class="btn btn-success btn-block">Détails</a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <h4 class="card-title">Nom Plat</h4>
                     <h6>Nom restaurant</h6>
                     <p class="card-text">bla bla bla haha bla bla </p>
-                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span</a>
+                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span></a>
                      <a href="plat.html" class="btn btn-success btn-block">Détails</a>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <h4 class="card-title">Nom Plat</h4>
                     <h6>Nom restaurant</h6>
                     <p class="card-text">bla bla bla haha bla bla </p>
-                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span</a>
+                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span></a>
                      <a href="plat.html" class="btn btn-success btn-block">Détails</a>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <h4 class="card-title">Nom Plat</h4>
                     <h6>Nom restaurant</h6>
                     <p class="card-text">bla bla bla haha bla bla </p>
-                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span</a>
+                     <a class="btn btn-success btn-block">Ajouter au panier : <span>15 £</span></a>
                      <a href="plat.html" class="btn btn-success btn-block">Détails</a>
                 </div>
             </div>
