--- a/WebContent/commande.html
+++ b/WebContent/commande.html
@@ -45,7 +45,7 @@
               <a href="profil.html" class="dropdown-item">
                 <i class="fa fa-user-circle"></i>  Profil
               </a>
-              <a href="connexion.html" class="dropdown-item">
+              <a href="Serv?operation=deconnexion" class="dropdown-item">
                 <i class="fa fa-user-times"></i> Déconnexion
               </a>
             </div>
