--- a/WebContent/details.html
+++ b/WebContent/details.html
@@ -29,13 +29,14 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
+
           <li class="nav-item dropdown mr-3">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenue Youssef</a>
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="badge badge-important">2</span>Notifications</a>
             <div class="dropdown-menu">
-              <a href="profil.html" class="dropdown-item">
+              <a href="Serv?operation=profil" class="dropdown-item">
                 <i class="fa fa-user-circle"></i>  Profil
               </a>
-              <a href="Serv?operation=deconnexion" class="dropdown-item">
+              <a href="connexion.html" class="dropdown-item">
                 <i class="fa fa-user-times"></i> Déconnexion
               </a>
             </div>
